--- a/UI/react-app/src/App.css
+++ b/UI/react-app/src/App.css
@@ -144,7 +144,7 @@ html, #root{
   color: white;
 }
 .navbar button, .navbar span{
-  transform: scale(0.8);
+  
 }
 .deleted-message{
   border: 1px solid #888;
@@ -154,4 +154,11 @@ html, #root{
 
 .modal-content{
   background-color: #000710 !important;
+}
+.navbar-light .navbar-toggler-icon{
+  background-image: url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 30 30%27%3e%3cpath stroke=%27rgba%28288, 288, 288, 1%29%27 stroke-linecap=%27round%27 stroke-miterlimit=%2710%27 stroke-width=%272%27 d=%27M4 7h22M4 15h22M4 23h22%27/%3e%3c/svg%3e");
+}
+
+.navbar-light .navbar-toggler{
+  border: 1px solid white;
 }
